--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "bcrs",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:bcrs": "node dist/bcrs/server/server.mjs"
+    "serve:ssr:bcrs": "node dist/bcrs/server/server.mjs",
+    "server": "nodemon dist/bcrs/server/server.mjs"
+
   },
   "private": true,
   "dependencies": {
@@ -21,8 +23,15 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.6",
-    "express": "^4.18.2",
+    "ajv": "^8.16.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "http-errors": "^2.0.0",
+    "mongodb": "^6.8.0",
+    "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -33,12 +42,20 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.19",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nodemon": "^3.1.4",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "~5.4.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 18.0.6.",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
