Added nav and footer

--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "test": "ng test",
     "serve:ssr:bcrs": "node dist/bcrs/server/server.mjs",
     "server": "nodemon dist/bcrs/server/server.mjs"
-
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.0",
+    "@angular/cdk": "^18.0.5",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^18.0.0",
+    "@angular/material": "^18.0.5",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/platform-server": "^18.0.0",
@@ -27,6 +28,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "mongodb": "^6.8.0",
     "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
