--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.6",
     "ajv": "^8.16.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
